--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
     
     <section class="contact-container">
         <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3197.5161001474316!2d-119.78107258477405!3d36.73418127911295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80945f85421b6075%3A0x5e10d36cd29b6e4!2sThe+Bitwise+Hive!5e0!3m2!1sen!2sus!4v1550026100569" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3197.5161001474316!2d-119.78107258477405!3d36.73418127911295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80945f85421b6075%3A0x5e10d36cd29b6e4!2sThe+Bitwise+Hive!5e0!3m2!1sen!2sus!4v1550026100569" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>-->
         </div>
         <div class="form">
                                                             <iframe height="660"
